--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 
   // --- Firebase Config: ERSETZE MIT DEINEN WERTEN ---
   const firebaseConfig = {
-    apiKey: "DEIN_API_KEY_HIER",
-    authDomain: "deinprojekt.firebaseapp.com",
-    databaseURL: "https://deinprojekt-default-rtdb.europe-west1.firebasedatabase.app",
-    projectId: "deinprojekt",
-    storageBucket: "deinprojekt.appspot.com",
-    messagingSenderId: "123456789",
-    appId: "1:123456789:web:abcdef123456"
+    apiKey: "AIzaSyCsxAEsivsJVFVcnerdAWezFpruoCv7Z2I",
+            authDomain: "qiuz-64055.firebaseapp.com",
+            databaseURL: "https://qiuz-64055-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "qiuz-64055",
+            storageBucket: "qiuz-64055.firebasestorage.app",
+            messagingSenderId: "605853616985",
+            appId: "1:605853616985:web:95579b246a10d89ba51a48"
   };
   /********** END CONFIG **********/
 
@@ -790,5 +790,6 @@ const startGame = async () => {
   </script>
 </body>
 </html>
+
 
 
