Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -789,12 +789,12 @@
                 >
                   {timeLeft}
                 </div>
-                <button 
-                  className="btn-show-results px-6 py-3 text-lg font-bold"
-                  onClick={showResultsNow}
-                >
-                  📊 Ergebnisse zeigen
-                </button>
+               // <button 
+                 // className="btn-show-results px-6 py-3 text-lg font-bold"
+                  //onClick={showResultsNow}
+               // >
+                  //📊 Ergebnisse zeigen
+               // </button>
               </div>
               <div className="question-text">{question.question}</div>
               <div className="answers-grid">
@@ -1137,4 +1137,5 @@
   </script>
 </body>
 </html>
+
 
