--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
     { question: "Welcher Sänger war jahrelang erfolgreich?", answers:["Sänger A","Sänger B","Sänger C","Sänger D"], correct:1, category:"Musik" },
     { question: "Welche Sportart wird mit einem Ball gespielt?", answers:["Tennis","Basketball","Fußball","Golf"], correct:2, category:"Sport" },
     { question: "Welches Spiel ist ein Jump'n'Run?", answers:["Shooter","RPG","Jump'n'Run","Strategy"], correct:2, category:"Games" },
+    { question: "Game1?", answers:["Game1","RPG","Jump'n'Run","Strategy"], correct:1, category:"Games" },
+    { question: "Game2?", answers:["Game1","Game2","Jump'n'Run","Strategy"], correct:2, category:"Games" },
+    { question: "Game3?", answers:["Game1","Game2","Game3","Strategy"], correct:3, category:"Games" },
   ];
 
   /************ Helpers ************/
@@ -1233,6 +1236,7 @@
   </script>
 </body>
 </html>
+
 
 
 
